unpackaged/main/default/objects/Story_Requirement__c/Story_Requirement__c.object-meta.xml
<CustomObject>
    <label>Story/Requirement</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Story/Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories/Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>