unpackaged/main/default/objects/Story_Requirement__c/fields/Additional_Details_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_Notes__c</fullName>
    <label>Additional Details/Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>