unpackaged/main/default/objects/Story_Requirement__c/fields/Design_Plan__c.field-meta.xml
<CustomField>
    <fullName>Design_Plan__c</fullName>
    <label>Design Plan</label>
    <type>TextArea</type>
</CustomField>