unpackaged/main/default/objects/Story_Requirement__c/fields/Tag_s__c.field-meta.xml
<CustomField>
    <fullName>Tag_s__c</fullName>
    <label>Tag(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>