unpackaged/main/default/objects/Story_Requirement__c/listViews/Delivered.listView-meta.xml
<ListView>
    <fullName>Delivered</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Delivered</label>
</ListView>