unpackaged/main/default/objects/Story_Requirement__c/listViews/Stories_by_Owner.listView-meta.xml
<ListView>
    <fullName>Stories_by_Owner</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Current Sprint</value>
    </filters>
    <label>Stories by Owner</label>
</ListView>