unpackaged/main/default/objects/Story_Requirement__c/listViews/Testing.listView-meta.xml
<ListView>
    <fullName>Testing</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sprint__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready to Test,Testing</value>
    </filters>
    <label>Testing</label>
</ListView>